syntax = "proto3";

package inventory;

option go_package = "github.com/gor911/microservices-grpc-kafka/pkg/inventorypb";

service Inventory {
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {}
}

message GetProductsRequest {
  repeated uint64 product_ids = 1;
}

message GetProductsResponse {
  repeated Product products = 1;
}

message Product {
  uint64 id = 1;
  string name = 2;
  uint64 price = 3;
}